--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,89 +1,90 @@
 <div style="padding-left:36%">
-  <div class="container" style="padding-top:20px">
-    <h4> Edit  Workout</h4>
-    
- </div>
- 
-  <div class="container" style="padding-top:10px">
- 
-   <form [formGroup]="workoutForm" (ngSubmit)="updateWorkout()" >
-    <div class="form-group">
- 
-       <div class="row">
-         <div class="col-lg-2"><label for="title">Title:</label></div>
-         <div class="col-lg-4"><input [ngModel]=workout?.title name="title" type="text" class="form-control" formControlName="title" id="title">
-           <span *ngIf="!workoutForm.get('title').valid && workoutForm.get('title').touched"
-           class="help-block" style="color:red"> Please Enter Title Name (Minimum 5 Characters)</span>
-         </div>
-         
-       </div>
-       <br>
-       <div class="row">
-           <div class="col-lg-2">
-             <label for="Note">Note:</label>
-           </div>
-           <div class="col-lg-4">
-             <textarea type="text" [ngModel]=workout?.note name="note" class="form-control" formControlName="note" id="Title">
-             </textarea>
-             <span *ngIf="!workoutForm.get('note').valid && workoutForm.get('note').touched"
-             class="help-block" style="color:red"> Please Enter Notes  (Minimum 5 Characters)</span>
-           </div>      
-       </div>
-         <br>
-         <div class="row">
-            
-                      <div class="col-lg-3">
-                        <label for="cbm">CaloriesBurntPerMin</label>
-                      </div>
-                      <div class="col-lg-2 ">
-                          <input type="number" [ngModel]=workout?.cbm name="cbm" class="form-control" step=0.1 formControlName="cbm" id="cbm">                          <span *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
-                            Enter Calories>0.1</span>
-                      </div>
-                      <div class="col-lg-1">
-                        <img src="assets/caloryplus.png" style="width: 111%;margin-left: -2px;padding-top: 6px"(click)="cbm=cbm+0.1" alt="Plus">
-                      </div>
-                      <div class="col-lg-1" >
-                        <img src="assets/minus.png" style="width:114%;margin-left:-21px;padding-top:5px;" (click)="cbm=cbm-0.1" (click)="cbm=cbm-0.1" alt="minus">
-                      </div>
-                   
-                    </div>
-     
- <br>
-         <div class="row">
- 
-           <div class="col-lg-2">
-             <label for="category">Category:</label>
-           </div>
-           <div class="col-lg-4">
-            <select class="form-control" formControlName="categoryId" >
-             <option *ngFor="let category of categoryList"   [ngValue]="category?.categoryId">
-               {{category.categoryName}}
-             </option> 
-             <span *ngIf="!workoutForm.get('categoryId').valid && workoutForm.get('categoryId').touched " class="help-block" style="color:red">
-                Please Select category</span>
-                         </select>
-                        
-          </div>
-         </div>
-         <br>
-             
-         <div class="row">
-             <div class="col-lg-3" style="padding-left:4%">
-                 <button style="width:120%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
-                    Update WorkOut
-                    
-                   </button>&nbsp;
-                  
-              </div>
-               <div class="col-lg-1">
-                   
-                   <button class ="btn btn-default btn-lg">Cancel</button>
-               </div>
-         </div>
-    
-    </div>
-   </form>
+    <div class="container" style="padding-top:20px">
+      <h4> Edit  Workout</h4>
+      
    </div>
- 
- 
-</div>
+   
+    <div class="container" style="padding-top:10px">
+   
+     <form [formGroup]="workoutForm" (ngSubmit)="updateWorkout()" >
+      <div class="form-group">
+   
+         <div class="row">
+           <div class="col-lg-2"><label for="title">Title:</label></div>
+           <div class="col-lg-4"><input [ngModel]=workout?.title name="title" type="text" class="form-control" formControlName="title" id="title">
+             <span *ngIf="!workoutForm.get('title').valid && workoutForm.get('title').touched"
+             class="help-block" style="color:red"> Please Enter Title Name (Minimum 5 Characters)</span>
+           </div>
+           
+         </div>
+         <br>
+         <div class="row">
+             <div class="col-lg-2">
+               <label for="Note">Note:</label>
+             </div>
+             <div class="col-lg-4">
+               <textarea type="text" [ngModel]=workout?.note name="note" class="form-control" formControlName="note" id="Title">
+               </textarea>
+               <span *ngIf="!workoutForm.get('note').valid && workoutForm.get('note').touched"
+               class="help-block" style="color:red"> Please Enter Notes  (Minimum 5 Characters)</span>
+             </div>      
+         </div>
+           <br>
+           <div class="row">
+              
+                        <div class="col-lg-4">
+                          <label for="cbm">Calories Burnt Per Min:</label>
+                        </div>
+                        <div class="col-lg-2 ">
+                            <input style="width:140%" type="number" [ngModel]=workout?.cbm name="cbm" class="form-control" step=0.1 formControlName="cbm" id="cbm"> 
+                            <span *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red;margin-left:-161%">
+                              Enter Calories Greater than 0.1 </span>
+                        </div>
+                        <!-- <div class="col-lg-1">
+                          <img src="assets/caloryplus.png" style="width: 111%;margin-left: -2px;padding-top: 6px"(click)="cbm=cbm+0.1" alt="Plus">
+                        </div>
+                        <div class="col-lg-1" >
+                          <img src="assets/minus.png" style="width:114%;margin-left:-21px;padding-top:5px;" (click)="cbm=cbm-0.1" (click)="cbm=cbm-0.1" alt="minus">
+                        </div> -->
+             </div>
+       
+   <br>
+           <!-- <div class="row">
+   
+             <div class="col-lg-2">
+               <label for="category">Category:</label>
+             </div>
+             <div class="col-lg-4">
+              <select class="form-control" formControlName="categoryId" >
+               <option *ngFor="let category of categoryList"   [ngValue]="category?.categoryId">
+                 {{category.categoryName}}
+               </option> 
+               <span *ngIf="!workoutForm.get('categoryId').valid && workoutForm.get('categoryId').touched " class="help-block" style="color:red">
+                  Please Select category</span>
+                           </select>
+                          
+            </div>
+           </div> -->
+           <br>
+               
+           <div class="row">
+               <div class="col-lg-3" style="padding-left:4%">
+                   <button style="width:130%" class="btn btn-success btn-lg "  type="submit"  [disabled]="!workoutForm.get('title').valid || !workoutForm.get('cbm').valid  || !workoutForm.get('note').valid" >
+                      Update WorkOut
+                      
+                     </button>&nbsp;
+                    
+                </div>
+                 <div class="col-lg-1" style="padding-left:5%">
+                     
+                     <button class ="btn btn-default btn-lg">Cancel</button>
+                 </div>
+           </div>
+      
+      </div>
+     </form>
+     </div>
+   
+   
+  </div>
+  
