--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -44,7 +44,9 @@
                                      <label for="startTime">Start Time</label>
                                  </div>
                                  <div class="col-lg-3">
-                         <input type="time" [value]="today|date:'shortTime'" class="form-control" formControlName="startTime" >
+                         <input  type="time"  class="form-control" formControlName="startTime" >
+                        
+                         <br/>
                                  </div>
                                </div>
                      <br>
