--- a/src/app/addworkout/addworkout.component.html
+++ b/src/app/addworkout/addworkout.component.html
@@ -33,20 +33,20 @@
         <br>
         <div class="row">
 
-          <div class="col-lg-3">
+          <div class="col-lg-4">
             <label for="cbm">CaloriesBurntPerMin</label>
           </div>
           <div class="col-lg-2 ">
-              <input type="number" class="form-control" step=0.1 [(ngModel)]="cbm"  name="cbm"  formControlName="cbm" id="cbm">
-              <span class="small" *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red">
-                 Enter Calories>0.1</span>
+              <input type="number" class="form-control" step=0.1 [(ngModel)]="cbm"  name="cbm"  formControlName="cbm" id="cbm" style="width:140%">
+              <span class="small" *ngIf="!workoutForm.get('cbm').valid && workoutForm.get('cbm').touched " class="help-block" style="color:red;margin-left:-161%">
+                 Enter Calories Greater than 0.1</span>
           </div>
-          <div class="col-lg-1">
+          <!-- <div class="col-lg-1">
             <img src="assets/caloryplus.png" style="width: 110%;margin-left: -2px;padding-top: 6px" (click)="cbm=cbm+0.1" alt="Plus">
           </div>
           <div class="col-lg-1" >
             <img src="assets/minus.png" style="width:114%;margin-left:-21px;padding-top:5px;" (click)="cbm=cbm-0.1" alt="minus">
-          </div>
+          </div> -->
        
         </div>
 <br>
